--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <table class="xianlu">
                 <tr><th>51pojies.top</th><td><a href="https://51pojies.top">点击进入</a></td></tr>
             </table>
-            <div class="youlian">本团队的软件不保证长期有效使用，如未达到效果代表软件已失效！所有软件发布时均测试有效，但被破解软件的官方人员会经常监测软件漏洞然后修复，所以本团队无法保证过一段时间后还能正常使用！如无法使用的软件，会在能力范围内修复】</div>
+            <div class="youlian">本团队的软件不保证长期有效使用，如未达到效果代表软件已失效！<br/>所有软件发布时均测试有效，但被破解软件的官方人员会经常监测软件漏洞然后修复，
+		    <br/>所以本团队无法保证过一段时间后还能正常使用！如无法使用的软件，
+		    <br/>会在能力范围内修复】</div>
             <div class="des">CopyRight © 2023 51破解</div>
         </div>
 
